@@ -1,3 +1,10 @@
+Mon Mar 22 14:28:06 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdig/HTML.cc: Fix three reported bugs about inconsistent
+	handling of space and punctuation in title, href description & head.
+	Now makes destinction between tags that cause word breaks and those
+	that don't, and which of the latter add space.
+
 Mon Mar 22 14:25:34 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htmerge/docs.cc: Make htmerge -vv report reasons for deleting docs.
@@ -8,7 +15,7 @@ Mon Mar 22 14:25:34 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 Fri Mar 19 17:09:21 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdig/HTML.cc: Fix bug where noindex_start was empty, allow case
-	insensitive matching of noindex_start & noindex_end
+	insensitive matching of noindex_start & noindex_end.
 
 	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
 	Fix inconsistencies in documentation for noindex_start & noindex_end.
